syntax = "proto3";
package node;

import "google/protobuf/empty.proto";

message UUID {
    string value = 1;
}

message VmConfig {
    UUID vmID = 1;
    int64 memory = 2;
    int64 vcpus = 3;
    string kernelImage = 4;
    string rootFileSystem = 5;
    string address = 6;
}

message Response {
    enum RequestStatus {
        SUCCESSFUL = 0;
        FAILED = 1;
    }

    RequestStatus status = 1;
    VmConfig config = 2;
}

message VmList {
    repeated UUID vmID = 1;
}

service Node {
    rpc StartVM(VmConfig) returns (Response) {}
    rpc StopVM(UUID) returns (Response) {}
    rpc ListVMs(google.protobuf.Empty) returns (VmList) {}
}
